# node-editor

./: Cargo.toml  README.md
crates/compiler/: Cargo.toml
crates/compiler/src/: compiler.rs  lib.rs  shader.rs  utils.rs
crates/compiler/src/shader/: inputs.rs  math.rs  vector.rs
crates/compiler/src/shader/constants/: float.rs  vec.rs
crates/compiler/src/shader/inputs/: camera.rs  vertex_input.rs
crates/compiler/src/shader/math/: binop.rs  one_minus.rs
crates/compiler/src/shader/outputs/: output.rs
crates/compiler/src/shader/vector/: compose.rs  decompose.rs
crates/compiler/src/utils/: sort.rs  template.rs
crates/model/: Cargo.toml
crates/model/src/: node.rs
crates/model/src/node/: inputs.rs  math.rs  outputs.rs  vector.rs
crates/model/src/node/constants/: float.rs  vec.rs
crates/model/src/node/inputs/: camera.rs  vertex_input.rs
crates/model/src/node/math/: binop.rs  one_minus.rs
crates/model/src/node/outputs/: output.rs
crates/model/src/node/vector/: compose.rs  decompose.rs
crates/ui/: Cargo.toml
crates/ui/src/: graph.rs  lib.rs  ui.rs  view.rs
crates/ui/src/graph/: fragment.rs  math.rs  simple.rs
crates/ui/src/ui/: nodes.rs
demo/: fragment.ron  math.json
src/: compiler.rs  graph.rs  lib.rs  node.rs  template.rs  ui.rs  view.rs
src/compiler/: shader.rs
src/compiler/shader/: constants.rs
src/compiler/shader/constants/: float.rs  vec.rs
src/compiler/shader/display/: output.rs
src/compiler/shader/fragment/: camera.rs
src/compiler/shader/math/: binop.rs
src/compiler/shader/vector/: compose.rs
src/graph/: fragment.rs  math.rs  simple.rs
src/node/: binop.rs  constants.rs  float.rs  fragment.rs  math.rs  op_add.rs  op_sub.rs  output.rs  vector.rs
src/node/constants/: float.rs  vec.rs  vec2.rs
src/node/display/: output.rs
src/node/fragment/: binop.rs  camera.rs  float.rs
src/node/math/: binop.rs  compose.rs  float.rs  output.rs  vec2.rs
src/node/vector/: compose.rs
src/utils/: sort.rs
