[package]
name = "node-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28.1"
egui = "0.28"
egui-snarl = { version = "0.4.3", features = ["serde"] }
gobs = { path = "../gobs-engine/gobs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
