[package]
name = "node-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28.1", features = ["wgpu"] }
egui = "0.28"
egui-snarl = { version = "0.4.3", features = ["serde"] }
glam = "0.29.0"
gobs = { path = "../gobs-engine/gobs" }
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
