[workspace]
members = ["crates/compiler", "crates/model", "crates/ui"]
resolver = "2"

[workspace.package]
authors = ["franckv <franck.vdl@gmail.com>"]
version = "0.1.0"
edition = "2021"

[workspace.dependencies.node-ui]
package = "node-ui"
path = "./crates/ui"

[workspace.dependencies.node-compiler]
package = "node-compiler"
path = "./crates/compiler"

[workspace.dependencies.node-model]
package = "node-model"
path = "./crates/model"

[workspace.dependencies]
eframe = { version = "0.28.1", features = ["wgpu"] }
egui = "0.28"
egui-snarl = { version = "0.4.3", features = ["serde"] }
glam = "0.29.0"
gobs = { path = "../gobs-engine/gobs" }
rfd = "0.14"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package]
name = "node-editor"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
egui = { workspace = true }
eframe = { workspace = true }
gobs = { workspace = true }
node-compiler = { workspace = true }
node-model = { workspace = true }
node-ui = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
