[package]
name = "node-ui"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
egui = { workspace = true }
egui-snarl = { workspace = true }
node-compiler = { workspace = true }
node-model = { workspace = true }
rfd = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
